--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="itkach.aard2"
-    android:versionCode="57"
-    android:versionName="0.57" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <queries>
         <intent>
