--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
       android:hardwareAccelerated="true"
       android:icon="@drawable/ic_launcher"
       android:label="@string/app_name"
-      android:theme="@style/Theme.MyApp" >
+      android:theme="@style/AppTheme" >
 
     <activity
         android:name=".MainActivity"
