--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application' version '8.4.2'
+    id 'org.jetbrains.kotlin.android' version '1.8.0'
 }
 
 repositories {
@@ -69,19 +70,26 @@ android {
     lint {
         abortOnError false
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'com.google.android.material:material:1.12.0'
     implementation "androidx.webkit:webkit:1.9.0"
-    implementation "androidx.core:core:1.13.1"
     implementation "androidx.appcompat:appcompat:1.7.0"
     implementation "androidx.viewpager2:viewpager2:1.1.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.7"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.7"
+    implementation "androidx.navigation:navigation-runtime-ktx:2.7.7"
     api 'com.fasterxml.jackson.core:jackson-databind:2.4+'
     api 'com.fasterxml.jackson.core:jackson-core:2.4+'
     api 'com.fasterxml.jackson.core:jackson-annotations:2.4+'
     api 'com.github.kazy1991:FontDrawable:0.9.5'
     api project(':slobj')
     api project(':slobber')
+    implementation 'androidx.core:core-ktx:1.13.1'
 }
