--- a/build.gradle
+++ b/build.gradle
@@ -63,9 +63,9 @@ android {
         minSdkVersion 21
         targetSdkVersion 34
         compileSdk 34
-        versionName "0.57"
-        versionCode  57
-        applicationId "itkach.aard2"
+        versionName "1.0.0"
+        versionCode  58
+        applicationId "com.akylas.aard2"
     }
     lint {
         abortOnError false
