--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ android {
             }
         }
     }
-
+    compileSdkVersion 35
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 35
