--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -174,6 +174,6 @@ jobs:
         with:
           name:  ${{ env.APP_ID }}.${{ env.VERSION_STR }}
           path: |
-            dist/app-release.apk
+            aardict-release.apk
           retention-days: 7
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
