--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
   <application
+      android:usesCleartextTraffic="true"
       android:name=".Application"
       android:allowBackup="true"
       android:hardwareAccelerated="true"
