--- a/settings.gradle
+++ b/settings.gradle
@@ -18,5 +18,9 @@ pluginManagement {
     }
 }
 
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
+}
+
 includeFlat 'slobj'
 includeFlat 'slobber'
