--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/temurin-17.jdk/Contents/Home
+
