--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="itkach.aard2"
-    android:versionCode="58"
-    android:versionName="0.58" >
+    android:versionCode="59"
+    android:versionName="0.59" >
 
     <queries>
         <intent>
@@ -21,7 +20,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+        android:configChanges="uiMode">
 
         <activity
             android:name=".MainActivity"
