--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules-release.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules-release.pro'
             if (System.getenv("KEYSTORE") != null) {
                 signingConfig signingConfigs.release
             }
@@ -80,12 +80,13 @@ android {
         targetSdkVersion 34
         compileSdk 34
         applicationIdSuffix 'darkmod'
-        versionName "12.1223.14"
+        versionName "13.0201.16"
         versionCode  64
         setProperty("archivesBaseName", "aard25-" + versionCode + "-" + applicationIdSuffix)
     }
 
     compileOptions {
+//        coreLibraryDesugaringEnabled = true
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
@@ -95,6 +96,13 @@ android {
 }
 
 dependencies {
+    // https://developer.android.com/studio/write/java8-support#library-desugaring
+    // For AGP 7.4+
+//    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.4")
+    // For AGP 7.3
+    // coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.2.3")
+    // For AGP 4.0 to 7.2
+    // coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.9")
     api 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
     api 'com.fasterxml.jackson.core:jackson-core:2.18.2'
     api 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'
